Use LoggerStubFactory.